src/test/fail/missing_parenth.ly
###
SyntaxError: Unexpected token 'end of file'.
Where: File "test/fail/missing_parenth.ly" at line 6
###

integer a = 0   a = ((a)
